--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 
-    <title>Hello, world!</title>
+    <!-- Page Tab Icon -->
+    <link rel="icon" href="https://art.pixilart.com/36d64bc3cedef6c.png">
+
+    <title>FNAF Lore</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <!-- Amelia Creates a NAVBAR -->
+     <div class="fnaf-lore-navbar">
+        <div class="fnaf-lore-nav-logo"><img src=""></div>
+        <div class="fnaf-lore-nav-right">
+            <div class="fnaf-lore-nav-item"></div>
+            <div class="fnaf-lore-nav-item"></div>
+            <div class="fnaf-lore-nav-item"></div>
+        </div>
+     </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
