--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
     <!-- Amelia Creates a NAVBAR -->
      <div class="fnaf-lore-navbar">
-        <div class="fnaf-lore-nav-logo"><img src=""></div>
+        <div class="fnaf-lore-nav-logo"><img src="images/golder-freddy-logo.png" alt="navbar-logo"></div>
         <div class="fnaf-lore-nav-right">
             <div class="fnaf-lore-nav-item"></div>
             <div class="fnaf-lore-nav-item"></div>
             <div class="fnaf-lore-nav-item"></div>
         </div>
      </div>
+
+    <!--Amelia Creates homepage element-->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
